--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,4 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
+
+:root{
+    --primary: #EB6C27;
+    --text: #3a3a3a;
+    --bg: #FFFFFF;
+    --text--gray: #888888;
+}
+
 nav{
     display: flex;
     flex-direction: row;
@@ -14,6 +22,7 @@ menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    z-index: 1;
 }
 
 menu > li {
@@ -21,6 +30,9 @@ menu > li {
     overflow: hidden;
 }
 
+.logo{
+    max-width: 40%;
+}
 .menu-button-container {
     display: none;
     height: 100%;
@@ -38,7 +50,7 @@ menu > li {
 .menu-button::before,
 .menu-button::after {
     display: block;
-    background-color: #fff;
+    background-color: black;
     position: absolute;
     height: 4px;
     width: 30px;
@@ -77,7 +89,7 @@ menu > li {
     menu {
         position: absolute;
         top: 0;
-        margin-top: 50px;
+        margin-top: 80px;
         left: 0;
         flex-direction: column;
         width: 100%;
@@ -92,7 +104,6 @@ menu > li {
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ menu li {
-        border: 1px solid #333;
         height: 2.5em;
         padding: 0.5em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -104,7 +115,7 @@ menu > li {
         padding: 0.5em 0;
         width: 100%;
         color: white;
-        background-color: #222;
+        background-color: var(--primary);
     }
     menu > li:not(:last-child) {
         border-bottom: 1px solid #444;
