--- a/styles/computer.css
+++ b/styles/computer.css
@@ -12,22 +12,10 @@
     nav{
         position: absolute;
         background-color: var(--bg);
-        margin: 20px;
-        min-width: calc(100% - 70px);
-    }
-
-    .reference--overlay  {
-        background: rgba(235, 108, 39, 0.9);
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        visibility: hidden;
-        pointer-events: none;
-        display: flex;
-        justify-content: center;
-        gap: 6px;
-        flex-direction: column;
+        margin-right: 125px;
+        margin-left: 125px;
+        margin-top: 40px;
+        min-width: calc(100% - 280px);
     }
 
     .hover__efect{
@@ -35,24 +23,12 @@
     }
 
     .hover__efect:hover > aside{
-        background-color: red;
+        background-color: var(--primary);
     }
     .centrovani__textu{
         position: relative;
     }
 
-    .overlay {
-        background-color: orange;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-    }
 
     .centrovani__textu:hover .overlay {
         opacity: 1;
@@ -88,13 +64,21 @@
         flex:1;
     }
     menu > li > a{
-        color: #888888;
+        color: var(--text--gray);
         text-decoration: none;
     }
 
     .article__background__image{
         padding-left: 145px;
         padding-right: 145px;
+    }
+
+    .article__margin{
+        margin: 40px;
+    }
+
+    header{
+        height: 100vh;
     }
 
 
