--- a/styles/computer.css
+++ b/styles/computer.css
@@ -18,13 +18,6 @@
         min-width: calc(100% - 280px);
     }
 
-    .hover__efect{
-        position: relative;
-    }
-
-    .hover__efect:hover > aside{
-        background-color: var(--primary);
-    }
     .centrovani__textu{
         position: relative;
     }
@@ -80,6 +73,30 @@
     header{
         height: 100vh;
     }
+    .header__next__page{
+        height: 10em;
+        background: linear-gradient(0deg, rgba(36, 36, 36, 0.4), rgba(36, 36, 36, 0.4)), linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #42332A 0%, rgba(255, 255, 255, 0) 100%), url("../Media/pageheader-1920w.jpg");
+        background-blend-mode: normal, normal, hue, normal;
+        width: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    .header___main__page{
+        height: 100vh;
+    }
+
+
+
+    .overlay_2 {
+        /*   top: 0;
+          right: 0;
+          left: 0;
+          bottom: 0; */
+        inset: 0;
+    }
+
+
 
 
 }
