--- a/styles/style.css
+++ b/styles/style.css
@@ -162,4 +162,27 @@ header{
 .header___main__page{
     height: 50vh;
 }
+.obrazky__reference > article:hover .overlay{
+    position: absolute;
+    background-color: var(--primary);
+    opacity: 0.8;
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    top: 20px;
+    color: var(--bg);
+    font-size:20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+
+.overlay{
+    width: 0;
+    height: 0;
+    font-size: 0;
+}
+
+
+
+
 
