Extremismus je obrovský problém

--- a/styles/computer.css
+++ b/styles/computer.css
@@ -124,4 +124,13 @@
     .article__title{
         margin: 125px;
     }
+
+    .kontakt__grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 0 100px;
+    }
+
+    img{
+    }
 }
