kdysi strejda google ví všechno. Dneska chatgpt ví všechno a udělá všechno

--- a/styles/computer.css
+++ b/styles/computer.css
@@ -71,19 +71,15 @@
     }
 
     header{
-        height: 100vh;
+        height: 60rem;
     }
     .header__next__page{
         height: 10em;
         background: linear-gradient(0deg, rgba(36, 36, 36, 0.4), rgba(36, 36, 36, 0.4)), linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #42332A 0%, rgba(255, 255, 255, 0) 100%), url("../Media/pageheader-1920w.jpg");
         background-blend-mode: normal, normal, hue, normal;
-        width: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
     }
     .header___main__page{
-        height: 100vh;
+        height: 64rem;
     }
     .center__text__on__pc{
         text-align: center;
