--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -49,12 +49,9 @@ menu > li > a{
     background-color: var(--primary);
 }
 
-.logo{
-    max-width: 40%;
-}
+
 .menu-button-container {
     display: none;
-    height: 100%;
     width: 70px;
     cursor: pointer;
     flex-direction: column;
@@ -70,9 +67,8 @@ menu > li > a{
 .menu-button,
 .menu-button::before,
 .menu-button::after {
-    background: linear-gradient(90deg, #EB6C27 0%, #FFBE9A 100%);
     display: block;
-    background-color: var(--text);
+    background: var(--text) linear-gradient(90deg, #EB6C27 0%, #FFBE9A 100%);
     height: 8px;
     width: 46px;
     transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -86,8 +82,8 @@ menu > li > a{
 
 .menu-button > p{
     position: absolute;
-    right: 20px;
-    top: -70px;
+    right: -2px;
+    top: -50px;
     color: var(--text);
 }
 
