--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ html {
 }
 body
 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     margin: 0;
 }
 :root{
@@ -150,7 +150,7 @@ header{
 }
 
 .header___main__page{
-    height: 50rem;
+    height: 30rem;
 }
 
 
