--- a/styles/computer.css
+++ b/styles/computer.css
@@ -1,22 +1,18 @@
-@media (min-width:801px){
+
+
+@media (min-width:760px){
+
     .article__with__image{
         display: flex;
         /*two columns in flex*/
-        grid-gap: 0 100px;
+        grid-gap: 0 50px;
     }
     .obrazky__reference{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
     }
 
-    nav{
-        position: absolute;
-        background-color: var(--bg);
-        margin-right: 125px;
-        margin-left: 125px;
-        margin-top: 40px;
-        min-width: calc(100% - 280px);
-    }
 
     .centrovani__textu{
         position: relative;
@@ -25,9 +21,6 @@
 
     .centrovani__textu:hover .overlay {
         opacity: 1;
-    }
-    section{
-        margin: 125px;
     }
     .section__without__space{
         margin: 0;
@@ -56,15 +49,7 @@
     .hlavni_obsah{
         flex:1;
     }
-    menu > li > a{
-        color: var(--text--gray);
-        text-decoration: none;
-    }
 
-    .article__background__image{
-        padding-left: 145px;
-        padding-right: 145px;
-    }
 
     .article__margin{
         margin: 40px;
@@ -72,6 +57,7 @@
 
     header{
         background: linear-gradient(0deg, rgba(36, 36, 36, 0.4), rgba(36, 36, 36, 0.4)), linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #42332A 0%, rgba(255, 255, 255, 0) 100%), url("../Media/pageheader-1920w.jpg");
+        background-position: center;
         height: 60rem;
     }
     .header__next__page{
@@ -85,12 +71,13 @@
 
     }
     .obrazky__reference > article:hover .overlay{
+        /*je to u obrazku, takže tady si dovolím použít width 100% i když to není přímo obráze. V případě lepšího řešení budu rád za zpětnou vazbu*/
         position: absolute;
         background-color: var(--primary);
         opacity: 0.8;
-        width: calc(100% - 40px);
-        height: calc(100% - 40px);
-        top: 20px;
+        width: calc(100% - 2.5rem);
+        height: calc(100% - 2.5rem);
+        top: 1.25rem;
         color: var(--bg);
         font-size:20px;
         display: flex;
@@ -104,9 +91,6 @@
         font-size: 0;
     }
 
-    .index__h1{
-        font-size: 120px;
-    }
 
     .velky_a_tucny{
         font-size: 3em;
@@ -125,7 +109,71 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 0 100px;
     }
+    .button__header{
+        display: flex;
+    }
 
-    img{
+    .header__items{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
+
+@media (min-width: 961px){
+
+    nav{
+        position: absolute;
+        background-color: var(--bg);
+        margin-left: var(--maly__notebook__odsaznie);
+        margin-top: 40px;
+        min-width: calc(100% - 8rem);
+    }
+    menu > li > a{
+        color: var(--text--gray);
+        text-decoration: none;
+    }
+
+    article{
+        padding-left: var(--maly__notebook__odsaznie);
+        padding-right: var(--maly__notebook__odsaznie);
+    }
+    .obrazky__reference > article:hover .overlay{
+        width: calc(100% - 2.5rem);
+        height: calc(100% - 2.5rem);
+    }
+    .article__reference{
+        padding: 0;
+    }
+    .section__reference{
+        padding-left: var(--maly__notebook__odsaznie);
+        padding-right: var(--maly__notebook__odsaznie);
+    }
+    .obrazky__reference > article:hover .overlay{
+        width: 100%;
+        height: 100%;
+        top: 0;
     }
 }
+
+@media (min-width: 1281px){
+
+    /*člověk si může nastavit velikost odsazeni buď sám, nebo že si to zadá v html. Zvažoval jsem udělat třídu indentation, ale nechtělo se mi to tam pořád psát*/
+    article{
+        padding-left: var(--pocitac__odsazeni);
+        padding-right: var(--pocitac__odsazeni);
+    }
+    nav{
+        margin-left: var(--pocitac__odsazeni);
+        min-width: calc(100% - 2*var(--pocitac__odsazeni));
+    }
+    .section__reference{
+        padding-left: var(--pocitac__odsazeni);
+        padding-right: var(--pocitac__odsazeni);
+    }
+
+
+}
+
