--- a/styles/computer.css
+++ b/styles/computer.css
@@ -1,5 +1,3 @@
-
-
 @media (min-width:760px){
 
     .article__with__image{
@@ -61,7 +59,7 @@
         height: 60rem;
     }
     .header__next__page{
-        height: 10em;
+        height: 5em;
     }
     .header___main__page{
         height: 64rem;
@@ -79,15 +77,24 @@
         height: calc(100% - 2.5rem);
         top: 1.25rem;
         color: var(--bg);
-        font-size:20px;
+        font-size: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center; }
+        justify-content: center;
+    }
+    .obrazky__reference > article:hover .overlay p{
+        font-size: 15px;
+    }
+
 
     .overlay{
         width: 0;
         height: 0;
+        font-size: 0;
+    }
+
+    .overlay > p{
         font-size: 0;
     }
 
@@ -110,7 +117,12 @@
         grid-gap: 0 100px;
     }
     .button__header{
-        display: flex;
+        display: inline-block;
+        margin-bottom: 300px;
+    }
+
+    .button__header:after{
+        content: url("../Media/icons/icon--arrow.svg");
     }
 
     .header__items{
@@ -119,10 +131,19 @@
         align-items: center;
         justify-content: center;
     }
-
 }
 
 @media (min-width: 961px){
+    .header__next__page{
+        height: 10em;
+    }
+    .index__h1{
+        font-size: 7rem;
+    }
+    .subheading{
+        font-size: 3.5rem;
+    }
+
 
     nav{
         position: absolute;
@@ -152,6 +173,7 @@
         padding-right: var(--maly__notebook__odsaznie);
     }
     .obrazky__reference > article:hover .overlay{
+        /*tady beru, že to je jako u obrázku, takže tady je to pochopitelné použítí width 100%*/
         width: 100%;
         height: 100%;
         top: 0;
@@ -173,7 +195,5 @@
         padding-left: var(--pocitac__odsazeni);
         padding-right: var(--pocitac__odsazeni);
     }
-
-
 }
 
