--- a/styles/computer.css
+++ b/styles/computer.css
@@ -9,6 +9,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 1rem;
+
     }
 
 
@@ -33,7 +34,11 @@
     }
     .article--reference {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-flow: dense;
+        justify-content: center;
+        height: max-content;
+
     }
 
     /*flex reverse*/
@@ -134,6 +139,9 @@
 }
 
 @media (min-width: 961px){
+    .article--reference{
+        grid-template-columns: repeat(3, 1fr);
+    }
     .header__next__page{
         height: 10em;
     }
